--- a/Lab 1/01_lab_toSubmitOnCanvas_slns.html
+++ b/Lab 1/01_lab_toSubmitOnCanvas_slns.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="PUT YOUR NAME HERE" />
 
-<meta name="date" content="2023-01-22" />
+<meta name="date" content="2023-01-27" />
 
 <title>Lab 1 Assignment - Review/Introduction to R and Data Structures</title>
 
@@ -354,7 +354,7 @@ display: none;
 and Data Structures</h1>
 <h3 class="subtitle">SOC 325: Quantified-Self</h3>
 <h4 class="author">PUT YOUR NAME HERE</h4>
-<h4 class="date">2023-01-22</h4>
+<h4 class="date">2023-01-27</h4>
 
 </div>
 
@@ -653,35 +653,95 @@ it into R.]</p>
 <li>Read the detailed Airbnb data into R</li>
 </ol>
 <pre class="r"><code>## See above
-airbnb&lt;-read_csv(here(&quot;data&quot;,&quot;listings.csv&quot;))</code></pre>
-<pre><code>## Rows: 7785 Columns: 16
+airbnb&lt;-read_csv(&quot;http://data.insideairbnb.com/united-states/wa/seattle/2022-12-24/data/listings.csv.gz&quot;)</code></pre>
+<pre><code>## Rows: 6166 Columns: 75
 ## ── Column specification ────────────────────────────────────────────────────────
 ## Delimiter: &quot;,&quot;
-## chr   (5): name, host_name, neighbourhood_group, neighbourhood, room_type
-## dbl  (10): id, host_id, latitude, longitude, price, minimum_nights, number_o...
-## date  (1): last_review
+## chr  (26): listing_url, source, name, description, neighborhood_overview, pi...
+## dbl  (37): id, scrape_id, host_id, host_listings_count, host_total_listings_...
+## lgl   (7): host_is_superhost, host_has_profile_pic, host_identity_verified, ...
+## date  (5): last_scraped, host_since, calendar_last_scraped, first_review, la...
 ## 
 ## ℹ Use `spec()` to retrieve the full column specification for this data.
 ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
 <pre class="r"><code>glimpse(airbnb)</code></pre>
-<pre><code>## Rows: 7,785
-## Columns: 16
-## $ id                             &lt;dbl&gt; 2318, 4291, 5682, 6606, 9419, 9460, 953…
-## $ name                           &lt;chr&gt; &quot;Casa Madrona - Urban Oasis, 1 block fr…
-## $ host_id                        &lt;dbl&gt; 2536, 35749, 8993, 14942, 30559, 30832,…
-## $ host_name                      &lt;chr&gt; &quot;Megan&quot;, &quot;Jess &amp; Joey&quot;, &quot;Maddy&quot;, &quot;Joyce…
-## $ neighbourhood_group            &lt;chr&gt; &quot;Central Area&quot;, &quot;Other neighborhoods&quot;, …
-## $ neighbourhood                  &lt;chr&gt; &quot;Madrona&quot;, &quot;Roosevelt&quot;, &quot;South Delridge…
-## $ latitude                       &lt;dbl&gt; 47.61082, 47.68780, 47.52398, 47.65411,…
-## $ longitude                      &lt;dbl&gt; -122.2908, -122.3134, -122.3599, -122.3…
-## $ room_type                      &lt;chr&gt; &quot;Entire home/apt&quot;, &quot;Private room&quot;, &quot;Ent…
-## $ price                          &lt;dbl&gt; 296, 82, 48, 90, 70, 80, 165, 125, 120,…
-## $ minimum_nights                 &lt;dbl&gt; 4, 2, 3, 2, 2, 3, 3, 2, 2, 2, 5, 2, 2, …
-## $ number_of_reviews              &lt;dbl&gt; 16, 54, 428, 110, 120, 366, 34, 32, 61,…
-## $ last_review                    &lt;date&gt; 2018-04-22, 2017-08-27, 2018-04-28, 20…
-## $ reviews_per_month              &lt;dbl&gt; 0.14, 0.91, 4.31, 1.02, 1.26, 3.45, 0.4…
-## $ calculated_host_listings_count &lt;dbl&gt; 2, 5, 1, 3, 5, 4, 2, 2, 3, 7, 4, 5, 5, …
-## $ availability_365               &lt;dbl&gt; 289, 312, 157, 325, 349, 203, 262, 236,…</code></pre>
+<pre><code>## Rows: 6,166
+## Columns: 75
+## $ id                                           &lt;dbl&gt; 844939, 6606, 9596, 84676…
+## $ listing_url                                  &lt;chr&gt; &quot;https://www.airbnb.com/r…
+## $ scrape_id                                    &lt;dbl&gt; 2.022122e+13, 2.022122e+1…
+## $ last_scraped                                 &lt;date&gt; 2022-12-24, 2022-12-24, …
+## $ source                                       &lt;chr&gt; &quot;city scrape&quot;, &quot;city scra…
+## $ name                                         &lt;chr&gt; &quot;Five Star Downtown Desig…
+## $ description                                  &lt;chr&gt; &quot;Next to the Space Needle…
+## $ neighborhood_overview                        &lt;chr&gt; &quot;The condo is in award-wi…
+## $ picture_url                                  &lt;chr&gt; &quot;https://a0.muscache.com/…
+## $ host_id                                      &lt;dbl&gt; 4411144, 14942, 14942, 44…
+## $ host_url                                     &lt;chr&gt; &quot;https://www.airbnb.com/u…
+## $ host_name                                    &lt;chr&gt; &quot;Emma&quot;, &quot;Joyce&quot;, &quot;Joyce&quot;,…
+## $ host_since                                   &lt;date&gt; 2012-12-15, 2009-04-26, …
+## $ host_location                                &lt;chr&gt; &quot;Seattle, WA&quot;, &quot;Seattle, …
+## $ host_about                                   &lt;chr&gt; &quot;My husband and I are tra…
+## $ host_response_time                           &lt;chr&gt; &quot;within an hour&quot;, &quot;within…
+## $ host_response_rate                           &lt;chr&gt; &quot;96%&quot;, &quot;100%&quot;, &quot;100%&quot;, &quot;1…
+## $ host_acceptance_rate                         &lt;chr&gt; &quot;100%&quot;, &quot;87%&quot;, &quot;87%&quot;, &quot;89…
+## $ host_is_superhost                            &lt;lgl&gt; TRUE, FALSE, FALSE, TRUE,…
+## $ host_thumbnail_url                           &lt;chr&gt; &quot;https://a0.muscache.com/…
+## $ host_picture_url                             &lt;chr&gt; &quot;https://a0.muscache.com/…
+## $ host_neighbourhood                           &lt;chr&gt; &quot;Belltown&quot;, &quot;Wallingford&quot;…
+## $ host_listings_count                          &lt;dbl&gt; 2, 4, 4, 1, 9, 2, 10, 2, …
+## $ host_total_listings_count                    &lt;dbl&gt; 13, 5, 5, 2, 10, 2, 15, 4…
+## $ host_verifications                           &lt;chr&gt; &quot;[&#39;email&#39;, &#39;phone&#39;, &#39;work…
+## $ host_has_profile_pic                         &lt;lgl&gt; TRUE, TRUE, TRUE, TRUE, T…
+## $ host_identity_verified                       &lt;lgl&gt; TRUE, TRUE, TRUE, TRUE, T…
+## $ neighbourhood                                &lt;chr&gt; &quot;Seattle, Washington, Uni…
+## $ neighbourhood_cleansed                       &lt;chr&gt; &quot;Belltown&quot;, &quot;Wallingford&quot;…
+## $ neighbourhood_group_cleansed                 &lt;chr&gt; &quot;Downtown&quot;, &quot;Other neighb…
+## $ latitude                                     &lt;dbl&gt; 47.61503, 47.65444, 47.65…
+## $ longitude                                    &lt;dbl&gt; -122.3475, -122.3363, -12…
+## $ property_type                                &lt;chr&gt; &quot;Entire condo&quot;, &quot;Entire g…
+## $ room_type                                    &lt;chr&gt; &quot;Entire home/apt&quot;, &quot;Entir…
+## $ accommodates                                 &lt;dbl&gt; 4, 1, 4, 2, 2, 4, 4, 2, 4…
+## $ bathrooms                                    &lt;lgl&gt; NA, NA, NA, NA, NA, NA, N…
+## $ bathrooms_text                               &lt;chr&gt; &quot;1 bath&quot;, &quot;1 bath&quot;, &quot;1 ba…
+## $ bedrooms                                     &lt;dbl&gt; 1, 1, 1, 1, 1, 2, 2, 1, 1…
+## $ beds                                         &lt;dbl&gt; 1, 1, 4, 1, 2, 3, 2, 1, 2…
+## $ amenities                                    &lt;chr&gt; &quot;[\&quot;Gym\&quot;, \&quot;Bathtub\&quot;, \…
+## $ price                                        &lt;chr&gt; &quot;$133.00&quot;, &quot;$99.00&quot;, &quot;$13…
+## $ minimum_nights                               &lt;dbl&gt; 2, 30, 30, 30, 2, 3, 3, 3…
+## $ maximum_nights                               &lt;dbl&gt; 1125, 1125, 200, 365, 90,…
+## $ minimum_minimum_nights                       &lt;dbl&gt; 2, 30, 30, 30, 2, 2, 3, 3…
+## $ maximum_minimum_nights                       &lt;dbl&gt; 2, 30, 30, 30, 2, 30, 7, …
+## $ minimum_maximum_nights                       &lt;dbl&gt; 1125, 1125, 200, 365, 90,…
+## $ maximum_maximum_nights                       &lt;dbl&gt; 1125, 1125, 200, 365, 90,…
+## $ minimum_nights_avg_ntm                       &lt;dbl&gt; 2.0, 30.0, 30.0, 30.0, 2.…
+## $ maximum_nights_avg_ntm                       &lt;dbl&gt; 1125.0, 1125.0, 200.0, 36…
+## $ calendar_updated                             &lt;lgl&gt; NA, NA, NA, NA, NA, NA, N…
+## $ has_availability                             &lt;lgl&gt; TRUE, TRUE, TRUE, TRUE, T…
+## $ availability_30                              &lt;dbl&gt; 21, 0, 22, 6, 30, 16, 30,…
+## $ availability_60                              &lt;dbl&gt; 44, 21, 52, 6, 60, 43, 60…
+## $ availability_90                              &lt;dbl&gt; 64, 51, 82, 6, 90, 71, 90…
+## $ availability_365                             &lt;dbl&gt; 154, 141, 82, 237, 363, 2…
+## $ calendar_last_scraped                        &lt;date&gt; 2022-12-24, 2022-12-24, …
+## $ number_of_reviews                            &lt;dbl&gt; 185, 159, 97, 75, 174, 70…
+## $ number_of_reviews_ltm                        &lt;dbl&gt; 43, 2, 0, 2, 20, 15, 3, 3…
+## $ number_of_reviews_l30d                       &lt;dbl&gt; 3, 0, 0, 1, 0, 1, 0, 0, 3…
+## $ first_review                                 &lt;date&gt; 2013-02-22, 2009-07-17, …
+## $ last_review                                  &lt;date&gt; 2022-12-12, 2022-09-03, …
+## $ review_scores_rating                         &lt;dbl&gt; 4.83, 4.61, 4.56, 4.82, 4…
+## $ review_scores_accuracy                       &lt;dbl&gt; 4.90, 4.67, 4.55, 4.89, 4…
+## $ review_scores_cleanliness                    &lt;dbl&gt; 4.90, 4.67, 4.50, 4.81, 4…
+## $ review_scores_checkin                        &lt;dbl&gt; 4.85, 4.83, 4.80, 4.82, 4…
+## $ review_scores_communication                  &lt;dbl&gt; 4.91, 4.76, 4.66, 4.88, 4…
+## $ review_scores_location                       &lt;dbl&gt; 4.95, 4.88, 4.91, 4.88, 4…
+## $ review_scores_value                          &lt;dbl&gt; 4.78, 4.57, 4.56, 4.89, 4…
+## $ license                                      &lt;chr&gt; &quot;STR-OPLI-19-000420&quot;, &quot;st…
+## $ instant_bookable                             &lt;lgl&gt; TRUE, FALSE, FALSE, FALSE…
+## $ calculated_host_listings_count               &lt;dbl&gt; 2, 2, 2, 1, 9, 2, 10, 2, …
+## $ calculated_host_listings_count_entire_homes  &lt;dbl&gt; 2, 2, 2, 0, 0, 2, 10, 0, …
+## $ calculated_host_listings_count_private_rooms &lt;dbl&gt; 0, 0, 0, 1, 9, 0, 0, 2, 0…
+## $ calculated_host_listings_count_shared_rooms  &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0…
+## $ reviews_per_month                            &lt;dbl&gt; 1.54, 0.97, 0.69, 0.62, 1…</code></pre>
 </div>
 <div id="use-the-data-to-answer-a-question" class="section level2">
 <h2>4.3: Use the data to answer a question</h2>
@@ -691,14 +751,18 @@ neighborhood as the listing?</em></p>
 <p>Try to figure out which variables to use from their names, and think
 about which verbs you’ve learned about might work to answer this
 question. See the hints at the end if you need help.</p>
-<pre class="r"><code>sr&lt;-airbnb%&gt;%group_by(room_type)%&gt;%summarise(n=n())
-sr</code></pre>
-<pre><code>## # A tibble: 3 × 2
-##   room_type           n
-##   &lt;chr&gt;           &lt;int&gt;
-## 1 Entire home/apt  5663
-## 2 Private room     1967
-## 3 Shared room       155</code></pre>
+<pre class="r"><code>## Number where Host lives (==) in Rental Neighborhood
+airbnb%&gt;%filter(host_neighbourhood==neighbourhood_cleansed)%&gt;%count()</code></pre>
+<pre><code>## # A tibble: 1 × 1
+##       n
+##   &lt;int&gt;
+## 1  2132</code></pre>
+<pre class="r"><code>## Number where Host Does not (!=) lives in Rental Neighborhood
+airbnb%&gt;%filter(host_neighbourhood!=neighbourhood_cleansed)%&gt;%count()</code></pre>
+<pre><code>## # A tibble: 1 × 1
+##       n
+##   &lt;int&gt;
+## 1  3675</code></pre>
 </div>
 <div id="build-on-your-answer" class="section level2">
 <h2>4.4: Build on your answer</h2>
@@ -710,12 +774,13 @@ listing?</em></p>
 but you might need to look up how to use it. See the hints for more
 suggestions if you get stuck.</p>
 <pre class="r"><code>airbnb%&gt;%group_by(room_type)%&gt;%summarise(n=n()/nrow(airbnb))</code></pre>
-<pre><code>## # A tibble: 3 × 2
-##   room_type            n
-##   &lt;chr&gt;            &lt;dbl&gt;
-## 1 Entire home/apt 0.727 
-## 2 Private room    0.253 
-## 3 Shared room     0.0199</code></pre>
+<pre><code>## # A tibble: 4 × 2
+##   room_type              n
+##   &lt;chr&gt;              &lt;dbl&gt;
+## 1 Entire home/apt 0.847   
+## 2 Hotel room      0.000324
+## 3 Private room    0.150   
+## 4 Shared room     0.00195</code></pre>
 </div>
 <div id="reflect-and-interpret" class="section level2">
 <h2>4.5: Reflect and interpret</h2>
