--- a/Lab 6/06_lab_assigment.html
+++ b/Lab 6/06_lab_assigment.html
@@ -618,7 +618,7 @@ google_fit_my&lt;-google_fit_my%&gt;%group_by(month_year)%&gt;%
 [YOURCODEHERE]</code></pre>
 <p><span style="color: red;">END YOUR SOLUTION HERE</span></p>
 <p>Step 2, let’s plot <code>heart_rate</code> by
-<code>walking_duriation</code> with best fit line (linear model)</p>
+<code>walking_duration</code> with best fit line (linear model)</p>
 <p><span style="color: red;">YOUR SOLUTION HERE</span></p>
 <pre class="r"><code>google_fit_my%&gt;%ggplot(aes(x=[YOURCODEHERE],y=[YOURCODEHERE]))+
   geom_point()+
