--- a/Lab 6/06_lab_assigment.html
+++ b/Lab 6/06_lab_assigment.html
@@ -562,8 +562,7 @@ any interesting metrics</p>
 the data again and again.</li>
 </ul>
 <p>We will use the <code>read_xlsx([URL TO SHEET HERE])</code> to get
-the sheet information. Run this code for the first time directly in the
-<em>Console</em> to work through the sign in process.</p>
+the sheet information.</p>
 <pre class="r"><code>weight&lt;-read_xlsx(&quot;data/Daily2012-2022-calexpensed-weight.xlsb.xlsx&quot;)
 google_fit&lt;-[YOURCODEHERE](&quot;data/Daily2012-2022-google fit data.xlsb.xlsx&quot;)</code></pre>
 </div>
